# shadowlink

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  shadowlink.py
.github/workflows/: publish.yml  test.yml
docs/: API.md
shadowlink/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  output.py  shadowlink.py  version.py
tests/: __init__.py  test_cli.py  test_config.py  test_exceptions.py  test_output.py  test_shadowlink.py
